temporarily fix alignment

--- a/src/Pages/Gallery/Components/imageArea.module.css
+++ b/src/Pages/Gallery/Components/imageArea.module.css
@@ -4,6 +4,7 @@
     margin-bottom: 20px;
     align-items: center;
     justify-content: center;
+    transform: translateX(+5%);
 }
 
 .imgwrap>* {
